--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>王海</title>
+    <meta name="author" content="Wanghai">
+    <meta name="description" content="A software engineer">
+    <link rel="shortcut icon" href="images/favicons/favicon.ico">
     <link rel="stylesheet" type="text/css" href="assets/css/main.css"/>
 </head>
 
@@ -13,7 +16,7 @@
 <div class="vi">
     <div class="sidebar">
         <div class="header">
-            <h1>王海</h1>
+            <h1>Wanghai</h1>
             <div class="quote">
                 <p class="quote-text animate-init">我疯狂地挥舞着键盘，郑重地敲下了：</p>
                 <p class="quote-author animate-init">Hello World</p>
