--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>王海</title>
     <meta name="author" content="Wanghai">
     <meta name="description" content="A software engineer">
-    <link rel="shortcut icon" href="images/favicons/favicon.ico">
+    <link rel="shortcut icon" href="assets/images/favicons/favicon.ico">
     <link rel="stylesheet" type="text/css" href="assets/css/main.css"/>
 </head>
 
