--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>王海</title>
+    <title>王海 Wanghai</title>
     <meta name="author" content="Wanghai">
     <meta name="description" content="A software engineer">
     <link rel="shortcut icon" href="assets/images/favicons/favicon.ico">
@@ -16,7 +16,7 @@
 <div class="vi">
     <div class="sidebar">
         <div class="header">
-            <h1>Wanghai</h1>
+            <h1>王海</h1>
             <div class="quote">
                 <p class="quote-text animate-init">我疯狂地挥舞着键盘，郑重地敲下了：</p>
                 <p class="quote-author animate-init">Hello World</p>
