--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <div class="header">
             <h1>王海</h1>
             <div class="quote">
-                <p class="quote-text animate-init">人一定会死，程序一定有 Bug。</p>
-                <p class="quote-author animate-init">—— Wanghai</p>
+                <p class="quote-text animate-init">人一定会死，程序一定会有 Bug。</p>
+                <p class="quote-author animate-init">Wanghai</p>
             </div>
         </div>
         <div class="menu">
